--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nl">
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -21,7 +21,7 @@
 			display: flex;
 			justify-content: center;
 			align-items: center;
-			font-size: 20px;
+			font-size: 20px; 
 		}
 	</style>
 </head>
