--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 	<div class="wrapper">
 		<div class="contents">
-			<h2>Rick Carolus Gerrit Bruijs</h2>
+			<h1>Lorem Bipsum</h1>
 			<img src="https://picsum.photos/600/300" alt="Lorem Alt">
 		</div>
 	</div>
